--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ping-pong-score",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "sass": "^1.50.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
