--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "sass": "^1.50.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
+    "@types/react-redux": "^7.1.23",
+    "react-redux": "^7.2.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
