--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "sass": "^1.50.0"
   },
   "dependencies": {
+    "@microsoft/signalr": "^6.0.3",
     "@reduxjs/toolkit": "^1.8.1",
-    "@types/react-redux": "^7.1.23",
-    "react-redux": "^7.2.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -16,8 +15,11 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "@types/react-redux": "^7.1.23",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
